tests/ui/where-clauses/self-in-where-clause-allowed.stderr
error[E0277]: the trait bound `dyn Trait: AutoTrait` is not satisfied
  --> $DIR/self-in-where-clause-allowed.rs:22:18
   |
LL |     trait_object.autotrait_bound();
   |                  ^^^^^^^^^^^^^^^ the trait `AutoTrait` is not implemented for `dyn Trait`
   |
note: required by a bound in `Trait::autotrait_bound`
  --> $DIR/self-in-where-clause-allowed.rs:13:43
   |
LL |     fn autotrait_bound(&self) where Self: AutoTrait {}
   |                                           ^^^^^^^^^ required by this bound in `Trait::autotrait_bound`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
